--- a/src/index.css
+++ b/src/index.css
@@ -3,97 +3,122 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
+@layer base {
+  html {
+    @apply font-poppins;
+  }
+}
+.gm-style{
+    border-radius: 24px;
+}
+
 .gm-style .gm-style-iw-c {
-  border-radius: 10px !important;
-  padding: 0!important;
-  left: 5rem;
-  top:20rem;
+    border-radius: 10px !important;
+    padding: 0 !important;
+    left: 5rem;
+    top: 20rem;
+    font-family: "Poppins";
 }
 
-.gm-style .gm-style-iw-tc{
-  display: none;
+.gm-style .gm-style-iw-tc {
+    display: none;
 
 }
 
-.gm-style .gm-style-iw-d{
-  padding: 0 !important;
-  overflow: hidden !important;
+.gm-style .gm-style-iw-d {
+    padding: 0 !important;
+    overflow: hidden !important;
 }
 
-.gm-style-iw .gm-style-iw-c button{
-  display: none!important;
+.gm-style-iw-d {
+    min-width: 256px !important;
+    max-width: 256px !important;
+}
+
+.gm-style .gm-style-iw-c {
+    min-width: 256px !important;
+    max-width: 256px !important;
+}
+
+.gm-style-iw .gm-style-iw-c button {
+    display: none !important;
 
 }
 
 .gm-ui-hover-effect {
-  display: none!important;
+    display: none !important;
 
 }
 
 .dot-pulse {
-  position: relative;
-  left: -9999px;
-  width: 8px;
-  height: 8px;
-  border-radius: 5px;
-  background-color: #141416;
-  color: #141416;
-  box-shadow: 9999px 0 0 -5px;
-  animation: dot-pulse 1.2s infinite linear;
-  animation-delay: 0.25s;
+    position: relative;
+    left: -9999px;
+    width: 8px;
+    height: 8px;
+    border-radius: 5px;
+    background-color: #141416;
+    color: #141416;
+    box-shadow: 9999px 0 0 -5px;
+    animation: dot-pulse 1.2s infinite linear;
+    animation-delay: 0.25s;
 }
+
 .dot-pulse::before, .dot-pulse::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  width: 8px;
-  height: 8px;
-  border-radius: 5px;
-  background-color: #141416;
-  color: #141416;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    width: 8px;
+    height: 8px;
+    border-radius: 5px;
+    background-color: #141416;
+    color: #141416;
 }
+
 .dot-pulse::before {
-  box-shadow: 9984px 0 0 -5px;
-  animation: dot-pulse-before 1.2s infinite linear;
-  animation-delay: 0s;
+    box-shadow: 9984px 0 0 -5px;
+    animation: dot-pulse-before 1.2s infinite linear;
+    animation-delay: 0s;
 }
+
 .dot-pulse::after {
-  box-shadow: 10014px 0 0 -5px;
-  animation: dot-pulse-after 1.2s infinite linear;
-  animation-delay: 0.5s;
+    box-shadow: 10014px 0 0 -5px;
+    animation: dot-pulse-after 1.2s infinite linear;
+    animation-delay: 0.5s;
 }
 
 @keyframes dot-pulse-before {
-  0% {
-    box-shadow: 9984px 0 0 -5px;
-  }
-  30% {
-    box-shadow: 9984px 0 0 2px;
-  }
-  60%, 100% {
-    box-shadow: 9984px 0 0 -5px;
-  }
+    0% {
+        box-shadow: 9984px 0 0 -5px;
+    }
+    30% {
+        box-shadow: 9984px 0 0 2px;
+    }
+    60%, 100% {
+        box-shadow: 9984px 0 0 -5px;
+    }
 }
+
 @keyframes dot-pulse {
-  0% {
-    box-shadow: 9999px 0 0 -5px;
-  }
-  30% {
-    box-shadow: 9999px 0 0 2px;
-  }
-  60%, 100% {
-    box-shadow: 9999px 0 0 -5px;
-  }
+    0% {
+        box-shadow: 9999px 0 0 -5px;
+    }
+    30% {
+        box-shadow: 9999px 0 0 2px;
+    }
+    60%, 100% {
+        box-shadow: 9999px 0 0 -5px;
+    }
 }
+
 @keyframes dot-pulse-after {
-  0% {
-    box-shadow: 10014px 0 0 -5px;
-  }
-  30% {
-    box-shadow: 10014px 0 0 2px;
-  }
-  60%, 100% {
-    box-shadow: 10014px 0 0 -5px;
-  }
+    0% {
+        box-shadow: 10014px 0 0 -5px;
+    }
+    30% {
+        box-shadow: 10014px 0 0 2px;
+    }
+    60%, 100% {
+        box-shadow: 10014px 0 0 -5px;
+    }
 }
